--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
   <div class="left-sidebar">
     <div class="sidebar-header d-flex align-items-center justify-content-between">
       <img src="assets/images/logo.png" alt="Logo">
-      <span class="designation">Front End Web Development</span>
+      <span class="designation">Web Development</span>
     </div>
     <img class="me" src="assets/images/photo1.jpg" alt="Me">
     <h2 class="email">
@@ -254,7 +254,7 @@
         <div class="left-sidebar">
           <div class="sidebar-header d-flex align-items-center justify-content-between">
             <img src="assets/images/logo.png" alt="Logo">
-            <span class="designation">Front End Web Development</span>
+            <span class="designation">Web Development</span>
           </div>
           <img class="me" src="assets/images/photo1.jpg" alt="Me">
           <h2 class="email">
@@ -295,7 +295,7 @@
                   <i class="las la-home"></i> Introduce
                 </h4>
                 <h1 class="scroll-animation" data-animation="fade_from_bottom">Hello my name <span>Rakha Raihan</span>,
-                  I'm Front End Web Development </h1>
+                  I'm Web Development </h1>
               </div>
               <div class="facts d-flex">
                 <div class="left scroll-animation" data-animation="fade_from_left">
@@ -303,7 +303,7 @@
                   <p>Years of <br>Experience </p>
                 </div>
                 <div class="right scroll-animation" data-animation="fade_from_right">
-                  <h1>32+</h1>
+                  <h1>10+</h1>
                   <p>projects completed </p>
                 </div>
               </div>
@@ -341,6 +341,8 @@
               <div class="resume-timeline">
                 <div class="item scroll-animation" data-animation="fade_from_right">
                   <span class="date">2023 - To Date</span>
+                  <h2>Owner Of Streaming Movie Website <span>Planetmovie</span></h2>
+                  <p>Website Marketing</p>
                   <h2>Owner Of Streaming Anime Website <span>Planetanime</span></h2>
                   <p>Website Marketing</p>
                   <h2>Owner Of Streaming Drama Korea Website <span>Planetdrama</span></h2>
@@ -348,7 +350,7 @@
                   <h2>Owner Of Template Website <span>Themegarden</span></h2>
                   <p>Website Marketing</p>
                   <h2>Owner Of Umusik Mp3 Website</h2>
-                  <p>Website Marketing</p>
+                  <p>Website Marketing | 2022 - 2023</p>
                   <h2>WordPress Developer</h2>
                   <p>Envato Market</p>
                 </div>
